# AI-classes

./: .gitignore  LICENSE  README.md
Aula1/: 1.1 - Aula1.ipynb  pyproject.toml
Aula1/material/: 1_3_Prática(Solução).ipynb
Aula1/solutions/: aula1.2 - pratica.ipynb  aula1.4 - teórica.ipynb  aula1.ipynb
Aula2/: pyproject.toml
Aula2/material/: 2.1 - Aula2.ipynb  2.3 - Prática(Solução).ipynb
Aula2/solutions/: 2.2 - Pratica.ipynb  2.4 - Teórica.ipynb
Aula3/: pyproject.toml
Aula3/material/: 3.1 - Aula.ipynb  3.3 - Prática(Solução).ipynb
Aula3/solutions/: 3.2 - Prática.ipynb  Teórica.ipynb
Trab1/: Trab1_Henrique_Layber.ipynb  pyproject.toml  shell.nix
Trab1/article/: elsarticle-template.tex
Trab2/: Trab2_Henrique_Layber.py  flake.nix  pyproject.toml  shell.nix
Trab2/Dino/: dinoAI.py  dinoAIParallel.py
Trab2/app/: Trab2_Henrique_Layber.py  Trab2_Henrique_Layber_2.py
Trab2/app/Dino/: dinoAIParallel.py
Trab2/article/: elsarticle-template.tex
