[tool.poetry]
name = "aula1"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ipython-unittest = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
