[tool.poetry]
name = "trab1"
version = "0.1.0"
description = ""
authors = ["Henriquelay <37563861+Henriquelay@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipython-unittest = "^0.3.2"
# Manually install `openblas` on the system to use latest np
numpy = "1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
